<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/purple_200"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="63dp"
        android:layout_height="65dp"
        android:contentDescription="Imagem"
        app:srcCompat="@drawable/ic_baseline_face_24"
        tools:ignore="VectorDrawableCompat" />
    <!--android:contentDescription="@string/fotodousuario"-->

    <TextView
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:hint="@string/seu_nome"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textColorHint="@color/teal_700"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="411dp"
        android:layout_height="34dp"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/seu_email"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp" />

</LinearLayout>